--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,24 @@
 hs_err_pid*
 
 #ignore gwt cache
+*.class
+
+# Package Files #
+*.jar
+*.war
+
+# gwt caches and compiled units #
+Y_Manage/war/y_manage/
 gwt-unitCache/
-war/
+test-classes/
+www-test/
+
+# boilerplate generated classes #
+.apt_generated/
+
+# more caches and things from deploy #
+war/WEB-INF/deploy/
+war/WEB-INF/classes/
+
+# App engine generated #
+war/WEB-INF/appengine-generated/
